# nvr

./: meson.build
src/: ap_manager.cpp  ap_manager.hpp  avf_src.cpp  avf_src.hpp  common.cpp  common.hpp  config.cpp  config.hpp  eeprom.cpp  eeprom.hpp  element.cpp  element.hpp  gpio.cpp  gpio.hpp  i2c.cpp  i2c.hpp  jpeg_sink.cpp  led_manager.cpp  led_manager.hpp  logging.cpp  logging.hpp  main-update.cpp  main.cpp  pipeline.cpp  pipeline.hpp  reset_monitor.cpp  reset_monitor.hpp  ring_buffer.hpp  rtsp_src.cpp  sd_manager.cpp  sd_manager.hpp  update_manager.cpp  update_manager.hpp  usb.cpp  usb.hpp  usb_evc.hpp  usb_raw_control_event.cpp  usb_raw_control_event.hpp  usb_raw_gadget.cpp  usb_raw_gadget.hpp  (+6 more)
